Poly Build: created vertices not snapping on high poly surface #72913

Closed
opened 2020-01-05 11:42:47 +01:00 by user1 · 10 comments

System Information
Operating system: Linux-4.15.0-66201911071317-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: 56ef761381
Worked: (optional)

Short description of error
One would expect the poly-build-tool to create new vertices on the surface of the high poly mesh that one is going to retopo. That's not the case with snapping enabled.

Exact steps for others to reproduce the error

  • Open attached .blend file.
  • With the Poly Build tool try to use the ctrl-click-thing to extrude a new vertex on the monkey's surface (snap should work).
  • Enable the toggle Snap.
  • Try the ctrl-click-thing again and note that snapping doesn't work.
    tmp_T72913.blend
    Bildschirmfoto zu 2020-01-05 11-42-02.png
**System Information** Operating system: Linux-4.15.0-66201911071317-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: `56ef761381` Worked: (optional) **Short description of error** One would expect the poly-build-tool to create new vertices on the surface of the high poly mesh that one is going to retopo. That's not the case with snapping enabled. **Exact steps for others to reproduce the error** - Open attached .blend file. - With the Poly Build tool try to use the ctrl-click-thing to extrude a new vertex on the monkey's surface (snap should work). - Enable the toggle `Snap`. - Try the ctrl-click-thing again and note that snapping doesn't work. [tmp_T72913.blend](https://archive.blender.org/developer/F8262529/tmp_T72913.blend) ![Bildschirmfoto zu 2020-01-05 11-42-02.png](https://archive.blender.org/developer/F8260698/Bildschirmfoto_zu_2020-01-05_11-42-02.png)
Author

Added subscriber: @user1

Added subscriber: @user1

#66954 was marked as duplicate of this issue

#66954 was marked as duplicate of this issue

Added subscriber: @Pasang

Added subscriber: @Pasang

Confirmed. The trigger is actually inverted. You can see that leaving the snap target to "Face" and turning off the snapping actually works.

Confirmed. The trigger is actually inverted. You can see that leaving the snap target to "Face" and turning off the snapping actually works.
Germano Cavalcante changed title from Poly Buildcreated vertices not snapping on high poly surface to Poly Build: created vertices not snapping on high poly surface 2020-01-06 16:58:32 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Germano Cavalcante self-assigned this 2020-01-06 17:44:12 +01:00

After analyzing again, this is not a bug, but it is how the Transform operator works.
Poly Build calls a macro with the Transform operator at the end.
The Transform operator has a modal key called "Snap Invert" which by default is Ctrl.

"Holding down Ctrl inverts the snap setting in transform (turns it on when global snap is off and vice versa)" (#72913)

image.png

After analyzing again, this is not a bug, but it is how the `Transform operator` works. `Poly Build` calls a macro with the `Transform operator` at the end. The `Transform operator` has a modal key called `"Snap Invert"` which by default is `Ctrl`. "Holding down `Ctrl` inverts the snap setting in transform (turns it `on` when global snap is `off` and vice versa)" (#72913) ![image.png](https://archive.blender.org/developer/F8262578/image.png)

Closed as duplicate of #66954

Closed as duplicate of #66954

Added subscribers: @shamayimjosh, @OldSalty, @ZedDB, @ideasman42

Added subscribers: @shamayimjosh, @OldSalty, @ZedDB, @ideasman42
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72913
No description provided.